force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Security_Questionaire__c/agf__ADM_Security_Questionaire__c.object-meta.xml
<CustomObject>
    <label>Security Questionnaire</label>
    <nameField>
        <label>Questionnaire Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Security Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>