force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Security_Questionaire__c/fields/agf__Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>agf__Additional_Info__c</fullName>
    <description>Any additional information you think is relevant.</description>
    <inlineHelpText>Any additional information you think is relevant.</inlineHelpText>
    <label>Additional Information</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>