force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Security_Questionaire__c/fields/agf__Admin_enable__c.field-meta.xml
<CustomField>
    <fullName>agf__Admin_enable__c</fullName>
    <description>Can the Org Admin enable/disable this feature?</description>
    <inlineHelpText>Can the Org Admin enable/disable this feature?</inlineHelpText>
    <label>Admin can enable/disable feature?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>