force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Security_Questionaire__c/fields/agf__Availability_this_release__c.field-meta.xml
<CustomField>
    <fullName>agf__Availability_this_release__c</fullName>
    <description>Will the feature be GA, Pilot, or Other in the selected release?</description>
    <inlineHelpText>Will the feature be GA, Pilot, or Other in the selected release?</inlineHelpText>
    <label>Availability this release</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GA - General Availability</fullName>
                <default>true</default>
                <label>GA - General Availability</label>
            </value>
            <value>
                <fullName>Pilot</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>