force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Security_Questionaire__c/fields/agf__Func_Spec__c.field-meta.xml
<CustomField>
    <fullName>agf__Func_Spec__c</fullName>
    <description>Link to feature Functional Spec.</description>
    <inlineHelpText>Link to feature Functional Spec.</inlineHelpText>
    <label>Func Spec</label>
    <type>Url</type>
</CustomField>