force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Security_Questionaire__c/fields/agf__Link_to_test_env__c.field-meta.xml
<CustomField>
    <fullName>agf__Link_to_test_env__c</fullName>
    <description>Link to test environment for security testing. (Optional)</description>
    <inlineHelpText>Link to test environment for security testing. (Optional)</inlineHelpText>
    <label>Link to test environment</label>
    <type>Url</type>
</CustomField>