force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Security_Questionaire__c/fields/agf__Mgmt_Contact__c.field-meta.xml
<CustomField>
    <fullName>agf__Mgmt_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Management contact for usability and functionality questions.</description>
    <inlineHelpText>The Management contact for usability and functionality questions.</inlineHelpText>
    <label>Management Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SecQ_Mgmt_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>