force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Security_Questionaire__c/fields/agf__P4_code_path__c.field-meta.xml
<CustomField>
    <fullName>agf__P4_code_path__c</fullName>
    <description>The Perforce code path for this feature.</description>
    <inlineHelpText>The Perforce code path for this feature.</inlineHelpText>
    <label>Code Path in Perforce</label>
    <type>TextArea</type>
</CustomField>