force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Security_Questionaire__c/fields/agf__ProdSec_Product_Tag__c.field-meta.xml
<CustomField>
    <fullName>agf__ProdSec_Product_Tag__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product tag for the ProdSec team that this security questionnaire is related to</description>
    <label>ProdSec Product Tag</label>
    <referenceTo>agf__ADM_Product_Tag__c</referenceTo>
    <relationshipLabel>Security Questionnaires</relationshipLabel>
    <relationshipName>Security_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>