force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Security_Questionaire__c/fields/agf__QE_Contact__c.field-meta.xml
<CustomField>
    <fullName>agf__QE_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The QE contact for this feature.</description>
    <inlineHelpText>The QE contact for this feature.</inlineHelpText>
    <label>QE Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SecQ_QE_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>