force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Security_Questionaire__c/fields/agf__Reviewer_Notes__c.field-meta.xml
<CustomField>
    <fullName>agf__Reviewer_Notes__c</fullName>
    <description>Reviewer Notes.</description>
    <inlineHelpText>Reviewer Notes.</inlineHelpText>
    <label>Reviewer Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>