force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Security_Questionaire__c/fields/agf__Scheduled_Build__c.field-meta.xml
<CustomField>
    <fullName>agf__Scheduled_Build__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Scheduled Build.</description>
    <inlineHelpText>Scheduled Build.</inlineHelpText>
    <label>Release</label>
    <referenceTo>agf__ADM_Build__c</referenceTo>
    <relationshipLabel>Security Questionnaires</relationshipLabel>
    <relationshipName>SecQ_Scheduled_Build</relationshipName>
    <type>Lookup</type>
</CustomField>