force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Security_Questionaire__c/fields/agf__Scrum_Team__c.field-meta.xml
<CustomField>
    <fullName>agf__Scrum_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Scrum Team that is building this feature.</description>
    <inlineHelpText>The Scrum Team that is building this feature.</inlineHelpText>
    <label>Product Scrum Team</label>
    <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
    <relationshipLabel>Security Questionnaires</relationshipLabel>
    <relationshipName>SecQ_Scrum_Team</relationshipName>
    <type>Lookup</type>
</CustomField>