force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Security_Questionaire__c/fields/agf__Security_User_Story__c.field-meta.xml
<CustomField>
    <fullName>agf__Security_User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated security user story for the team</description>
    <inlineHelpText>The associated security user story for the team</inlineHelpText>
    <label>Security User Story</label>
    <referenceTo>agf__ADM_Work__c</referenceTo>
    <relationshipLabel>Security Questionnaires</relationshipLabel>
    <relationshipName>Security_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>