force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Security_Questionaire__c/fields/agf__Short_description_of_the_feature__c.field-meta.xml
<CustomField>
    <fullName>agf__Short_description_of_the_feature__c</fullName>
    <description>Provide a short description of the feature or initiative.</description>
    <inlineHelpText>Provide a short description of the feature or initiative.</inlineHelpText>
    <label>Short description of the feature</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>