force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Security_Questionaire__c/fields/agf__Tech_Spec__c.field-meta.xml
<CustomField>
    <fullName>agf__Tech_Spec__c</fullName>
    <description>Link to feature Technical Spec.</description>
    <inlineHelpText>Link to feature Technical Spec.</inlineHelpText>
    <label>Tech Spec</label>
    <type>Url</type>
</CustomField>