force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Security_Questionaire__c/fields/agf__Test_Password__c.field-meta.xml
<CustomField>
    <fullName>agf__Test_Password__c</fullName>
    <description>Password for test account. (Optional)</description>
    <inlineHelpText>Password for test account. (Optional)</inlineHelpText>
    <label>Test Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>