force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Security_Questionaire__c/fields/agf__Test_Username__c.field-meta.xml
<CustomField>
    <fullName>agf__Test_Username__c</fullName>
    <description>Username to be used for testing. (Optional)</description>
    <inlineHelpText>Username to be used for testing. (Optional)</inlineHelpText>
    <label>Test Username</label>
    <length>150</length>
    <type>Text</type>
</CustomField>